[tool.poetry]
name = "privgem"
version = "0.1.0"
description = "privgem: Privacy-Preserving Generative Models"
authors = ["Kasra Hosseini <khosseini@turing.ac.uk>"]
license = "MIT"
repository="https://github.com/kasra-hosseini/privgem"
readme="README.md"
classifiers=[
        "License :: OSI Approved :: MIT License",
        "Natural Language :: English",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.7",
        "Programming Language :: Python :: 3.8",
        "Intended Audience :: End Users/Desktop",
        "Intended Audience :: Developers",
        "Intended Audience :: Education",
        "Intended Audience :: Science/Research",
        "Operating System :: Unix",
        "Operating System :: MacOS",
        "Topic :: Software Development",
        "Topic :: Software Development :: Libraries :: Python Modules",
        "Topic :: Scientific/Engineering :: Artificial Intelligence",
    ]

[tool.poetry.dependencies]
python = ">=3.7,<3.9"
torch = "1.6.0"
PuLP = "^2.4"
networkx = "^2.6.1"
dython = "^0.6.6"
CTGAN = { git = "https://github.com/kasra-hosseini/CTGAN.git", branch = "privgem_develop"}
opacus = "^0.14.0"
shap = "^0.39.0"

[tool.poetry.dev-dependencies]
jupyterlab = "^3.0.16"
matplotlib = "^3.4.2"
pytest = "^6.2.4"
ipykernel = "^6.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
